--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-.team, .activity, .send-button, .container {
+.team, .send-button, .activity, .container {
   margin-left: auto;
   margin-right: auto;
 }
@@ -80,96 +80,6 @@ p {
 
 a {
   text-decoration: none;
-}
-
-.filter-buttons {
-  margin-right: 8px;
-}
-.filter-buttons:last-child {
-  margin-right: 0;
-}
-
-.btn {
-  display: inline-block;
-  font-family: "Roboto", sans-serif;
-  background-color: #F5F4FA;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
-  text-align: center;
-  cursor: pointer;
-  padding: 6px 22px;
-  border-radius: 4px;
-  border: 0;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.btn:hover, .btn:focus {
-  color: #FFFFFF;
-  background-color: #2196F3;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-.hero__button {
-  padding: 10px 32px;
-  min-width: 216px;
-  font-family: inherit;
-  color: #FFFFFF;
-  background-color: #2196F3;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-  border-radius: 4px;
-  cursor: pointer;
-  border: 0;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.hero__button:hover, .hero__button:active {
-  background-color: #188CE8;
-}
-
-.close-button {
-  position: absolute;
-  top: 11px;
-  right: 11px;
-  background-color: #FFFFFF;
-  width: 30px;
-  height: 30px;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.close-button:focus {
-  outline: none;
-}
-.close-button:hover svg, .close-button:focus svg {
-  fill: #2196F3;
-}
-
-.send-button {
-  width: 200px;
-  height: 50px;
-  color: #FFFFFF;
-  background: #2196F3;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border-color: transparent;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  cursor: pointer;
-}
-.send-button:hover, .send-button:focus {
-  background-color: #188CE8;
-  outline: none;
 }
 
 .header {
@@ -297,41 +207,6 @@ a {
   margin-bottom: 30px;
 }
 
-.feature {
-  display: flex;
-}
-
-.feature__icon {
-  height: 120px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #F5F4FA;
-  margin-bottom: 30px;
-}
-
-.feature__item {
-  width: calc((100% - 90px) / 4);
-  margin-right: 30px;
-}
-.feature__item:last-child {
-  margin-right: 0px;
-}
-
-.feature__title {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.1428;
-  margin-bottom: 13px;
-  text-transform: uppercase;
-}
-
-.feature__descript {
-  color: #757575;
-  font-size: 14px;
-  line-height: 1.71;
-}
-
 .activity {
   align-items: center;
 }
@@ -373,81 +248,122 @@ a {
   text-transform: uppercase;
 }
 
-.team-member__name {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.9;
-  margin-bottom: 10px;
+.address-nav {
+  margin-right: 70px;
+  width: 231px;
 }
 
-.team {
-  background-color: #F5F4FA;
-}
-
-.team-member__position {
-  color: #757575;
-  font-size: 16px;
-  line-height: 1.187;
-  margin-bottom: 16px;
-}
-
-.team-member {
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
-.member-card {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.member-card__item {
-  width: calc((100% - 90px) / 4);
-  margin-right: 30px;
+.address__link {
+  font-style: normal;
+  text-decoration: none;
   display: inline-block;
-  background-color: #FFFFFF;
-  border-radius: 0px 0px 4px 4px;
-  text-align: center;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  color: rgba(255, 255, 255, 0.6);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.member-card__item:last-child {
+.address__link:hover, .address__link:focus {
+  color: #2196F3;
+}
+
+.maps {
+  color: #FFFFFF;
+}
+
+.address-list__item:not(:last-child) {
+  margin-bottom: 9px;
+}
+
+.filter-buttons {
+  margin-right: 8px;
+}
+.filter-buttons:last-child {
   margin-right: 0;
 }
 
-.team-social {
+.btn {
+  display: inline-block;
+  font-family: "Roboto", sans-serif;
+  background-color: #F5F4FA;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  cursor: pointer;
+  padding: 6px 22px;
+  border-radius: 4px;
+  border: 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.btn:hover, .btn:focus {
+  color: #FFFFFF;
+  background-color: #2196F3;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.hero__button {
+  padding: 10px 32px;
+  min-width: 216px;
+  font-family: inherit;
+  color: #FFFFFF;
+  background-color: #2196F3;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  border-radius: 4px;
+  cursor: pointer;
+  border: 0;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.hero__button:hover, .hero__button:active {
+  background-color: #188CE8;
+}
+
+.close-button {
+  position: absolute;
+  top: 11px;
+  right: 11px;
+  background-color: #FFFFFF;
+  width: 30px;
+  height: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
-.team-social__item {
-  align-items: center;
+.close-button:focus {
+  outline: none;
 }
-.team-social__item:not(:first-child) {
-  margin-left: 10px;
+.close-button:hover svg, .close-button:focus svg {
+  fill: #2196F3;
 }
 
-.team-social__link {
-  width: 44px;
-  height: 44px;
-  background: #FFFFFF;
-  border-radius: 50%;
+.send-button {
+  width: 200px;
+  height: 50px;
+  color: #FFFFFF;
+  background: #2196F3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border-color: transparent;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
   display: flex;
   align-items: center;
   justify-content: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
 }
-.team-social__link:hover, .team-social__link:focus {
-  background-color: #2196F3;
-}
-.team-social__link:hover svg, .team-social__link:focus svg {
-  fill: #FFFFFF;
-}
-
-.team-social__icon {
-  fill: #afb1b8;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.send-button:hover, .send-button:focus {
+  background-color: #188CE8;
+  outline: none;
 }
 
 .client {
@@ -492,86 +408,39 @@ a {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-nav {
+.feature {
+  display: flex;
+}
+
+.feature__icon {
+  height: 120px;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 50px;
-}
-
-.projects-list {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.project__description {
-  font-size: 16px;
-  line-height: 1.88;
-  color: #757575;
-}
-
-.project__title {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-  margin-bottom: 4px;
-  color: #212121;
-}
-
-.project__link {
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.project__link:hover, .project__link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.project__name {
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 24px;
-  padding-right: 24px;
-  border: 1px solid rgb(238, 238, 238);
-  border-top: 0;
-}
-
-.project__item {
-  width: calc((100% - 60px) / 3);
-  margin-right: 30px;
+  background-color: #F5F4FA;
   margin-bottom: 30px;
 }
-.project__item:nth-child(3n) {
-  margin-right: 0;
+
+.feature__item {
+  width: calc((100% - 90px) / 4);
+  margin-right: 30px;
 }
-.project__item:nth-last-child(-n+3) {
-  margin-bottom: 0;
+.feature__item:last-child {
+  margin-right: 0px;
 }
 
-.project__thumb {
-  position: relative;
-  overflow: hidden;
+.feature__title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.1428;
+  margin-bottom: 13px;
+  text-transform: uppercase;
 }
 
-.text-overlay {
-  color: #FFFFFF;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.55;
-  letter-spacing: 0.03em;
-  padding: 63px 24px;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(33, 150, 243, 0.9);
-  transform: translateY(100%);
-  opacity: 0;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.project__link:hover .text-overlay {
-  transform: translateY(0);
-  opacity: 1;
+.feature__descript {
+  color: #757575;
+  font-size: 14px;
+  line-height: 1.71;
 }
 
 .footer {
@@ -655,73 +524,6 @@ a {
   align-items: center;
   justify-content: center;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.social-sub {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-}
-
-.join-title {
-  display: flex;
-  margin-bottom: 20px;
-  align-items: center;
-  justify-content: start;
-  color: #FFFFFF;
-}
-
-.social-sub__link {
-  width: 100%;
-  height: 100%;
-  background: rgba(255, 255, 255, 0.1);
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.social-sub__link:hover, .social-sub__link:focus {
-  background-color: #2196F3;
-}
-
-.social-sub__item {
-  width: calc((100% - 30px) / 4);
-  width: 44px;
-  height: 44px;
-}
-
-.social-sub__icon {
-  fill: #FFFFFF;
-}
-
-.address-nav {
-  margin-right: 70px;
-  width: 231px;
-}
-
-.address__link {
-  font-style: normal;
-  text-decoration: none;
-  display: inline-block;
-  color: rgba(255, 255, 255, 0.6);
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.address__link:hover, .address__link:focus {
-  color: #2196F3;
-}
-
-.maps {
-  color: #FFFFFF;
-}
-
-.address-list__item:not(:last-child) {
-  margin-bottom: 9px;
 }
 
 .backdrop {
@@ -905,4 +707,202 @@ textarea {
   line-height: 1.15;
   text-align: center;
   margin-bottom: 12px;
+}
+
+.portfolio-nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.projects-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.project__description {
+  font-size: 16px;
+  line-height: 1.88;
+  color: #757575;
+}
+
+.project__title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  margin-bottom: 4px;
+  color: #212121;
+}
+
+.project__link {
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.project__link:hover, .project__link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.project__name {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 24px;
+  padding-right: 24px;
+  border: 1px solid rgb(238, 238, 238);
+  border-top: 0;
+}
+
+.project__item {
+  width: calc((100% - 60px) / 3);
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+.project__item:nth-child(3n) {
+  margin-right: 0;
+}
+.project__item:nth-last-child(-n+3) {
+  margin-bottom: 0;
+}
+
+.project__thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.text-overlay {
+  color: #FFFFFF;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.55;
+  letter-spacing: 0.03em;
+  padding: 63px 24px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+  transform: translateY(100%);
+  opacity: 0;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.project__link:hover .text-overlay {
+  transform: translateY(0);
+  opacity: 1;
+}
+
+.social-sub {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.join-title {
+  display: flex;
+  margin-bottom: 20px;
+  align-items: center;
+  justify-content: start;
+  color: #FFFFFF;
+}
+
+.social-sub__link {
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.social-sub__link:hover, .social-sub__link:focus {
+  background-color: #2196F3;
+}
+
+.social-sub__item {
+  width: calc((100% - 30px) / 4);
+  width: 44px;
+  height: 44px;
+}
+
+.social-sub__icon {
+  fill: #FFFFFF;
+}
+
+.team-member__name {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.9;
+  margin-bottom: 10px;
+}
+
+.team {
+  background-color: #F5F4FA;
+}
+
+.team-member__position {
+  color: #757575;
+  font-size: 16px;
+  line-height: 1.187;
+  margin-bottom: 16px;
+}
+
+.team-member {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.member-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.member-card__item {
+  width: calc((100% - 90px) / 4);
+  margin-right: 30px;
+  display: inline-block;
+  background-color: #FFFFFF;
+  border-radius: 0px 0px 4px 4px;
+  text-align: center;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+.member-card__item:last-child {
+  margin-right: 0;
+}
+
+.team-social {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.team-social__item {
+  align-items: center;
+}
+.team-social__item:not(:first-child) {
+  margin-left: 10px;
+}
+
+.team-social__link {
+  width: 44px;
+  height: 44px;
+  background: #FFFFFF;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.team-social__link:hover, .team-social__link:focus {
+  background-color: #2196F3;
+}
+.team-social__link:hover svg, .team-social__link:focus svg {
+  fill: #FFFFFF;
+}
+
+.team-social__icon {
+  fill: #afb1b8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }/*# sourceMappingURL=main.css.map */
